# technical-test-dsp2-25-06

./: Dockerfile  README.md  main.py  pyproject.toml  settings.py
account_manager/: __init__.py  client.py  exceptions.py
models/: __init__.py  account_model.py  balance_model.py  identity_model.py  token_model.py  transaction_model.py  validation_model.py
